<?xml version="1.0"?>
<package>
  <name>proc_detection</name>
  <version>1.1.1</version>
  <description>
    The proc_detection package is responsible for object detection using tensorflow object detection API
  </description>

  <author>Antoine Dozois</author>
  <author>Martin Gauthier</author>

  <maintainer email="club.sonia@etsmtl.net">Club SONIA</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libdc1394-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>sonia_common</build_depend>


  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libdc1394-dev</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>vision_msgs</run_depend>
  <run_depend>sonia_common</run_depend>

</package>
